--- a/responsive_1.1.html
+++ b/responsive_1.1.html
@@ -32,7 +32,7 @@
       <img src="picture/5.jpg" alt="zielone góry">
       <img src="picture/6.jpg" alt="wodospad">
     </section>
-    <div class="anim"><div>złap mnie!</div></div>
+    <div id="anim"><div>złap mnie!</div></div>
   </main>
 
   <aside class="col-3 col-m-12">
